Missing source pointer down events are handled.

The correct MotionEvent sequence for scrolling is ACTION_DOWN, optional
number of ACTION_POINTER_DOWN, and ACTION_MOVE.
When there are one or two pointers down while moving, and no scrolling
has happened since beginning of the current event sequence, we check to
see if any of the pointers has exeeded their slop region or not.
If yes then scrolling starts and no tap event will happen for the rest
of the current event sequence, otherwise no scroll will happen and if
pointers get released before tap/long tap or two finger tap timers are
expired then those events will happen.

In some cases the ACTION_POINTER_DOWN event is missing from the event
sequence and it results in crashes in GetSourcePointerDownEvent since
the source pointer down event is not found.
This patch skips slop region check for pointers which don't have soure
pointer down event.
BUG=704426
TEST=GestureProviderTest.SlopRegionCheckOnMissingSecondaryPointerDownEvent

Review-Url: https://codereview.chromium.org/2843543002
Cr-Commit-Position: refs/heads/master@{#471872}

Former-commit-id: 6db0fde5caaa551bbf6e61b69d798a08cffcf11d